# SccoGeneration

./: .gitignore  README.md  demo.txt  docker-compose.yml  setup.sh
scco/db_functional_service/: .env  .gitignore  Dockerfile  QUESTIONS.md  README.md  fake_main.py  pyproject.toml  requirements.txt  run.sh
scco/db_functional_service/docs/: sql_queries.md
scco/db_functional_service/src/broker/: broker.py  rmq_broker.py
scco/db_functional_service/src/crud/: dbapi.py  message_group_id_generator.py  models.py  type_map.py
scco/db_functional_service/src/crud/base/: SelectorBase.py
scco/db_functional_service/src/crud/objects/: client.py  customer.py  customer_service.py  new_queries_csv.py  offer.py  query.py
scco/db_functional_service/src/data/customer/: customer1.json
scco/db_functional_service/src/db_functional_service/: dispatcher.py  main.py  main_test.py  reply.py  rmq_handle.py
scco/db_functional_service/src/db_functional_service/broker/: host_broker.py  rmq_broker.py
scco/db_functional_service/src/db_functional_service/data/: contains_queries_data.py  get_black_lists_data.py  init_db.py  insert_offers_data.py  insert_preprocessed_queries_data.py  ml_get_messages_data.py
scco/db_functional_service/src/db_functional_service/data/customer_creator/: insert_customer.py
scco/db_functional_service/src/db_functional_service/data/data_preproc/: filter_new_queries.py  get_customers_black_lists.py  get_customers_lists.py  insert_new_queries_csv.py  insert_preprocessed_queries.py
scco/db_functional_service/src/db_functional_service/data/ml_co_gen/: get_info_for_co_generation.py
scco/db_functional_service/src/db_functional_service/data/pdf_co_gen/: insert_offers.py
scco/db_functional_service/src/db_functional_service/funcs/: contains_queries.py  get_black_lists.py  insert_offers.py  insert_preprocessed_queries.py  ml_get_messages.py
scco/db_functional_service/src/db_functional_service/funcs/customer_creator/: insert_customer.py
scco/db_functional_service/src/db_functional_service/funcs/data_preproc/: filter_new_queries.py  get_customers_black_lists.py  get_customers_lists.py  insert_new_queries_csv.py  insert_preprocessed_queries.py
scco/db_functional_service/src/db_functional_service/funcs/ml_co_gen/: get_info_for_co_generation.py
scco/db_functional_service/src/db_functional_service/funcs/pdf_co_gen/: insert_offers.py
scco/db_functional_service/src/service/: db_insert_on_first_startup.py  dispatcher.py  main.py  reply.py
scco/db_functional_service/src/service/broker/: host_broker.py  rmq_broker.py
scco/db_functional_service/src/service/data/customer_creator/: insert_customer.py
scco/db_functional_service/src/service/data/data_preproc/: filter_new_queries.py  get_customers_lists.py  insert_new_queries_csv.py  insert_preprocessed_queries.py
scco/db_functional_service/src/service/data/init_db/: customer_builder.json  customer_it.json  old_customer_it.json
scco/db_functional_service/src/service/data/manual/: map_offers_to_messages.json  map_offers_to_messages.py
scco/db_functional_service/src/service/data/ml_co_gen/: get_info_for_co_generation.py
scco/db_functional_service/src/service/data/pdf_co_gen/: insert_offers.py
scco/db_functional_service/src/service/request_cb/: request_cb.py
scco/db_functional_service/src/testing/: init_db.py  simple_mock.py  tmp_init_db.py  util.py
scco/db_functional_service/src/testing/data/: customer_1.json  customer_2.json
scco/db_functional_service/src/util/: app_config.py  app_errors.py  json_handle.py  parse_env.py  reply.py  reply_ctx.py
scco/db_functional_service/tests/: .env  docker-compose.yml  main_test.py  main_test2.py  main_test3.py
scco/db_functional_service/tests/unit/testing/: test_simple_mock.py
scco/ml_generation/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
scco/ml_generation/ml_models/: .gitignore  README.md  generation.py  gigachat_gate.py  main.py  make_prompts.py  pyproject.toml  requirements.txt  token_update.py
scco/ml_generation/ml_models/configs/: prompts.ini
scco/ml_generation/src/: ChatAccessManager.py  LLM_Manager.py  ModelPromptsWrapper.py  SimpleBaseLine.py  main.py
scco/ml_generation/src/broker/: host_broker.py  rmq_broker.py
scco/ml_generation/src/ml_generation/: broker_config.py  dispatcher.py  dummy_ml_model.py  main.py  main_test.py  ml_model.py  rmq_broker.py
scco/ml_generation/src/ml_generation/broker/: host_broker.py  rmq_broker.py
scco/ml_generation/src/ml_generation/steps/: co_gen.py  preproc.py  wrap_step.py
scco/ml_generation/src/util/: app_config.py  app_errors.py  parse_env.py  reply.py
scco/ml_generation/tests/: README.md  concat_res.py  edit_user_message.ipynb  main_test.py  ml_models_test.py
scco/ml_generation/tests/answers/: ans10.txt  ans12.txt  ans13.txt  ans14.txt  ans15.txt  ans3.txt  ans4.txt  ans6.txt  ans7.txt  ans8.txt  ans9.txt
scco/ml_generation/tests/clients_messages/: clients_messages_10.txt  clients_messages_10_generated.txt  clients_messages_11.txt  clients_messages_13_generated.txt  clients_messages_15.txt  clients_messages_5_generated.txt  clients_messages_6.txt  clients_messages_6_generated.txt  clients_messages_8.txt  clients_messages_9_generated.txt
scco/ml_generation/tests/results/answers/: ans10.txt  ans11.txt  ans14.txt  ans3.txt  ans4.txt  ans5.txt  ans7.txt
scco/ml_generation/tests/results/clients_messages/: clients_messages_11_generated.txt  clients_messages_12.txt  clients_messages_12_generated.txt  clients_messages_13.txt  clients_messages_14.txt  clients_messages_14_generated.txt  clients_messages_15_generated.txt  clients_messages_3.txt  clients_messages_3_generated.txt  clients_messages_4.txt  clients_messages_4_generated.txt  clients_messages_5.txt  clients_messages_7.txt  clients_messages_7_generated.txt  clients_messages_8_generated.txt  clients_messages_9.txt  encoder.py
scco/ml_generation/tests/results/concated/: res10.txt  res11.txt  res12.txt  res13.txt  res14.txt  res15.txt  res3.txt  res4.txt  res5.txt  res6.txt  res7.txt  res8.txt  res9.txt
(+255 files in other folders)
