[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "ml_generation"
version = "0.1.0"
authors = [
    {name = "Egor Vashkevich", email = "goshikvash@gmail.com"}
]
maintainers = [
    {name = "Egor Vashkevich", email = "goshikvash@gmail.com"}
]
description = "ml_generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = [
    "dependencies",
]

################################################################################

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

################################################################################

# Pytest configuration:
# 1) https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options
# 2) https://habr.com/ru/articles/448796/

[tool.pytest.ini_options]
minversion = "8.2.0"
addopts = "-rsxX -l --tb=short --strict"
#addopts = "-rsxX -l --tb=short --strict -s" # enforce output
testpaths = [
    "tests",
]
norecursedirs = [
    ".*",
    ".venv",
    "src",
    "*.egg",
    "dist",
    "build",
]
python_classes = [
    "*Test",
    "Test*",
    "*Suite",
]
python_files = [
    "test_*",
    "*_test",
]
python_functions = [
    "test_*",
    "*_test",
]
